# AoC-Solutions

./: .gitignore  aoc_input.py  pyproject.toml  register.py  requirements.txt
2016/: day1_input.py  day2.py  day4.py  day5.py  day6.py  day7.py  day9.py
2016/Day 1/: class scratch.py  day1.py  path_class.py  scratch.py
2016/Day 2/: day2.py  keypad_class.py  keypad_class2.py
2016/Day 3/: day3.py  day3_part 1 final.py
2017/: day1.py  day3.py  day8.py
2017/Day 1/: day1_2.py  path_class-shahvir.py
2017/Day 2/: day2_final.py  (+1 more)
2018/: __init__.py  day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  input.py  register.py
2019/: __init__.py  aoc_input.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  input.py  template.py  test.py  test_day14.py  utils.py
2020/: __init__.py  aoc_input.py  day1.py  day2.py  day3.py  day4.py
2021/: Test.ipynb  __init__.py  aoc_input.py  bingo.py  day1.ipynb  day1.py  day10.py  day11.ipynb  day11.py  day12.ipynb  day12.py  day13.ipynb  day13.py  day14.ipynb  day14.py  day15.ipynb  day15.py  day16.ipynb  day16.py  day2.ipynb  day2.py  day3.ipynb  day3.py  day4.ipynb  day4.py  day5.ipynb  day5.py  day6.ipynb  day6.py  day7.py  day8.py  day9.py  helpers.py  requirements.txt  submarine.py
2022/: aoc_input.py  day1.py
2023/: day1.ipynb  day1.py  day2.ipynb  day2.py  day3.ipynb  day3.py  day4.ipynb  day4.py  day5.ipynb  day5.py  day6.py  day7.ipynb  day7.py  day9.ipynb  day9.py  template.py
(+24 files in other folders)
